fix nelmio routes customer, employee and rental
