# server/config/packages/nelmio_api_doc.yaml
@@ -3,12 +3,116 @@ nelmio_api_doc:
         info:
             title: Car Rental
             version: 1.0.0
+        components:
+            securitySchemes:
+                Bearer:
+                    type: http
+                    scheme: bearer
+                    bearerFormat: JWT
+        paths:
+            ### CUSTOMER PATHS ###
+            /api/customers/health-check:
+                get:
+                    responses:
+                        200:
+                            description: Module Customer running
+                            content:
+                                application/json:
+                                    schema:
+                                        type: object
+                                        properties:
+                                            message: { type: string, example: Module Customer up and running! }
+            /api/customers:
+                post:
+                    requestBody:
+                        content:
+                            application/json:
+                                schema:
+                                    type: object
+                                    properties:
+                                        name: { type: string, example: Peter }
+                                        address: { type: string, example: Fake street 123 }
+                                        age: { type: number, example: 30 }
+                                        employeeId: { type: string, example: 2d995fa5-7da7-4f49-94ad-b6bed527dca9 }
+                    responses:
+                        201:
+                            description: Customer created
+                            content:
+                                application/json:
+                                    schema:
+                                        type: object
+                                        properties:
+                                            customerId: { type: string, example: 2d995fa5-7da7-4f49-94ad-b6bed527dca9 }
+                                            
+            /api/customers/{id}:
+                get:
+                    responses:
+                        200:
+                            description: Customer data
+                            content:
+                                application/json:
+                                    schema:
+                                        type: object
+                                        properties:
+                                            id: { type: string, example: 2d995fa5-7da7-4f49-94ad-b6bed527dca9 }
+                                            name: { type: string, example: Peter }
+                                            address: { type: string, example: Fake street 123 }
+                                            age: { type: number, example: 30 }
+                                            employeeId: { type: string, example: 2d995fa5-7da7-4f49-94ad-b6bed527dca9 }
+            patch:
+                requestBody:
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    name: { type: string, example: Peter }
+                                    address: { type: string, example: Fake street 123 }
+                                    age: { type: number, example: 30 }
+                responses:
+                    200:
+                        description: Customer data
+                        content:
+                            application/json:
+                                schema:
+                                    type: object
+                                    properties:
+                                        id: { type: string, example: 2d995fa5-7da7-4f49-94ad-b6bed527dca9 }
+                                        name: { type: string, example: Peter }
+                                        address: { type: string, example: Fake street 123 }
+                                        age: { type: number, example: 30 }
+                                        employeeId: { type: string, example: 2d995fa5-7da7-4f49-94ad-b6bed527dca9 }
+            delete:
+                responses:
+                    204:
+                        description: Customer deleted
+                        
+            ### EMPLOYEE PATHS ###
+            /api/employee/health-check:
+                get:
+                    responses:
+                        200:
+                            description: Module Employee running
+                            content:
+                                application/json:
+                                    schema:
+                                        type: object
+                                        properties:
+                                            message: { type: string, example: Module Employee up and running! }
+                    
+            ### RENTAL PATHS ###
+            /api/rental/health-check:
+                get:
+                    responses:
+                        200:
+                            description: Module Rental running
+                            content:
+                                application/json:
+                                    schema:
+                                        type: object
+                                        properties:
+                                            message: { type: string, example: Module Rental up and running! }
+            
     areas: # to filter documented areas
         default:
             path_patterns: [ ^/api(?!/doc$) ] # Accepts routes under /api except /api/doc
-        customer:
-            path_patterns: [ ^/api/customer ]
-        employee:
-            path_patterns: [ ^/api/employee ]
-        rental:
-            path_patterns: [ ^/api/rental ]
