# server/src/Customer/Adapter/Framework/Http/Controller/Customer/GetCustomerByIdController.php
@@ -7,17 +7,17 @@ use Customer\Application\UseCase\Customer\GetCustomerById\DTO\GetCustomerByIdInp
 use Customer\Application\UseCase\Customer\GetCustomerById\GetCustomerById;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\HttpFoundation\Response;
-use Nelmio\ApiDocBundle\Annotation as Nelmio;
 use OpenApi\Attributes as OA;
+use Symfony\Component\Routing\Annotation\Route;
 
-#[Nelmio\Areas(['customer'])]
-#[OA\Tag('Customer')]
+#[OA\Tag(name: 'Customers')]
 class GetCustomerByIdController
 {
     public function __construct(private readonly GetCustomerById $useCase)
     {
     }
 
+    #[Route('/{id}', name: 'get_customer_by_id', methods: ['GET'])]
     public function __invoke(GetCustomerByIdRequestDTO $request): Response
     {
         $responseDTO = $this->useCase->handle(GetCustomerByIdInputDTO::create($request->id));
