# server/src/Customer/Adapter/Framework/Http/Controller/HealthCheckController.php
@@ -6,11 +6,12 @@ use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\HttpFoundation\Response;
 use Nelmio\ApiDocBundle\Annotation as Nelmio;
 use OpenApi\Attributes as OA;
+use Symfony\Component\Routing\Annotation\Route;
 
-#[Nelmio\Areas(['customer'])]
-#[OA\Tag('Customer')]
+#[OA\Tag(name: 'Customers')]
 class HealthCheckController
 {
+    #[Route('/health-check', name: 'customer_health_check', methods: ['GET'], priority: 10)]
     public function __invoke(): Response
     {
         return new JsonResponse([
